[package]
name = "forest_db"
description = "Database types used in Forest"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2021"
repository = "https://github.com/ChainSafe/forest"

[features]
default = []

rocksdb = ["dep:rocksdb", "lz4"]
lz4 = ["rocksdb?/lz4"]
# not included by default to reduce build time
# uncomment when it needs to be used by other crates
# snappy = ["rocksdb?/snappy"]
# zlib   = ["rocksdb?/zlib"]
# bzip2  = ["rocksdb?/bzip2"]
# zstd = ["rocksdb?/zstd"]

paritydb = ["dep:parity-db"]

[dependencies]
anyhow = "1.0.66"
cid = { version = "0.8", default-features = false, features = ["std"] }
fvm_ipld_blockstore = "0.1.1"
lazy_static = "1.4.0"
libipld = { version = "0.14", default-features = false, features = ["dag-cbor", "dag-json", "derive"] }
libp2p-bitswap = "0.25.0"
num_cpus = "1.14.0"
parity-db = { version = "0.4", default-features = false, optional = true }
parking_lot = "0.12.1"
prometheus = "0.13.3"
rocksdb = { version = "0.19", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"

[dev-dependencies]
tempfile = "3.3"